samples/_failures_safe/1761795679_42e700_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c70458b0.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_c70458b0.c:170: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_c70458b0.c:169:13: error: expected declaration or statement at end of input
  169 |             if
      |             ^~
./samples/SAFE/__tmp_c70458b0.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c70458b0.c:169:13: error: expected declaration or statement at end of input
